tests/spec/fail/kostroutine_non_name_call.aja
kostroutine (fuc(x: int) -> int: x)(1)
